--- a/views/list.ejs
+++ b/views/list.ejs
@@ -9,16 +9,16 @@
   <body>
     <h4>guest message</h4>
 
-    <ul class="list-group">
+    <div class="list-group">
         <% for (var i = 0; i < posts.length; i++){ %>
-        <li class="list-group-item">
-            <p>TO: <%= posts[i].받는이 %></p>
-            <p>FROM: <%= posts[i].보내는이 %></p>
+        <div class="list-group-item">
+            <p>TO <%= posts[i].받는이 %></p>
+            <p>FROM <%= posts[i].보내는이 %></p>
             <p><%= posts[i].내용 %></p>
-          <button class="delete" data-id="<%= posts[i]._id %>">삭제</button>
-        </li>
+          <button class="delete" data-id="<%= posts[i]._id %>" data-passWord="<%= posts[i].비밀번호 %>">삭제</button>
+        </div>
         <% } %>
-    </ul>
+    </div>
 
     <div class="container">
       <form id='addForm' action="/add" method="post">
@@ -51,21 +51,26 @@
     <script>
         //서버에 ajax delete 요청 날리기
         $('.delete').click(function(e){
-
-              console.log(e.target.dataset.비밀번호)
-              $.ajax({
+              var psw = prompt('비밀번호를 입력하세요:', '')
+              console.log(e.target.dataset.password)
+              if (psw == e.target.dataset.password){
+                $.ajax({
                   method:'DELETE',
                   url:'/delete',
                   data: {_id:e.target.dataset.id}
               }).done((결과)=>{
                   //ajax성공시 실행할 코드는 여기
-                  $(this).parent('li').fadeOut();
+                  $(this).parent('.list-group-item').fadeOut();
               }).fail((err)=>{
                 console.log('실패');
               })
+              }
+
+
             }
 
         )
+        //비밀번호 입력
 
     </script>  
 </body>
